# docs/openapi/api.swagger.json
@@ -371,6 +371,46 @@
         ]
       }
     },
+    "/api/v1/admin/records/{id}/photos": {
+      "post": {
+        "summary": "Add a photo to a service record (admin)",
+        "operationId": "HistoryService_AddServicePhoto",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1AddServicePhotoResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/HistoryServiceAddServicePhotoBody"
+            }
+          }
+        ],
+        "tags": [
+          "HistoryService"
+        ]
+      }
+    },
     "/api/v1/admin/records/{id}/products": {
       "post": {
         "summary": "Add a product used to a service record (admin)",
@@ -2671,6 +2711,20 @@
         }
       }
     },
+    "HistoryServiceAddServicePhotoBody": {
+      "type": "object",
+      "properties": {
+        "photoType": {
+          "type": "string"
+        },
+        "url": {
+          "type": "string"
+        },
+        "caption": {
+          "type": "string"
+        }
+      }
+    },
     "SettingsServiceSetOrganizationSettingBody": {
       "type": "object",
       "properties": {
@@ -2846,6 +2900,14 @@
         }
       }
     },
+    "v1AddServicePhotoResponse": {
+      "type": "object",
+      "properties": {
+        "photo": {
+          "$ref": "#/definitions/v1ServicePhoto"
+        }
+      }
+    },
     "v1AddVehicleRequest": {
       "type": "object",
       "properties": {
@@ -2995,6 +3057,9 @@
           "format": "int64"
         },
         "phone": {
+          "type": "string"
+        },
+        "name": {
           "type": "string"
         }
       }
